--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "tsx src/index.ts"
+    "start": "tsx src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "@prisma/client": "6.4.1",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.7.2",
-    "prisma": "^6.4.1",
     "xss": "^1.0.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "prisma": "^6.5.0",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
   }
 }
